--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,14 +46,14 @@ dependencies {
 
     def room_version = "2.2.1"
     def kodein_version = "6.4.0"
-    def lifecycle_version = "2.0.0"
+    def lifecycle_version = "1.1.0"
     // Room and Architectural Components
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     implementation "androidx.room:room-ktx:2.2.1"
-    kapt "androidx.room:room-compiler:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
